[package]
name = "dependency-refresh"
version = "0.1.8"
authors = ["Jan Murawski <jm@rq-project.net>"]
license = "GPL-3.0-only"
description = "This tool is meant to update rust dependency versions within Cargo.toml files."
repository = "https://github.com/RoffelKartoffel/dependency-refresh"
readme = "README.md"
keywords = ["toml", "dependencies", "Cargo", "update"]

[dependencies]
structopt = "0.3.14"
toml_edit = "0.1.5"
reqwest = { version = "0.10.4", features = ["blocking"] }
serde_json = "1.0.53"

[lib]
name = "libdr"
path = "src/lib.rs"

[[bin]]
name = "dr"
path = "src/bin.rs"
