[package]
name = "dependency-refresh"
version = "0.1.11"
authors = ["Jan Murawski <jm@rq-project.net>"]
license = "GPL-3.0-only"
description = "This tool is meant to update rust dependency versions within Cargo.toml files."
repository = "https://github.com/RoffelKartoffel/dependency-refresh"
readme = "README.md"
keywords = ["toml", "dependencies", "Cargo", "update"]

[dependencies]
structopt = "0.3.21"
toml_edit = "0.2.0"
reqwest = { version = "0.11.2", features = ["blocking", "gzip"] }
serde_json = "1.0.64"

[lib]
name = "libdr"
path = "src/lib.rs"

[[bin]]
name = "dr"
path = "src/bin.rs"
